@@ -1,3 +1,8 @@
+2018-03-24  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+
+	* src/input/check_result: New file
+	Makefile.in, src/input/Makefile.in: Support 'make check'
+
 2018-03-23  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
 	* src/interp/cparse.boot, src/interp/g-util.boot,
